--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ header {
 }
 
 .link__down {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
 }
 
 .display-none {
@@ -88,6 +88,7 @@ header {
 }
 
 .black-curtain {
+  display: none;
   position: fixed;
   top: -100vh;
   left: 0;
@@ -530,6 +531,29 @@ footer {
   width: 50%;
 }
 
+.vist__360 {
+  position: fixed;
+  width: 80%;
+  top: 20%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: var(--color-terciario);
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+.button__close {
+  position: fixed;
+  top: 15%;
+  cursor: pointer;
+  transition: 0.3s ease all;
+}
+
+.button__close:hover {
+  scale: 1.1;
+}
+
 .map__title {
   color: var(--color-resaltador);
 }
@@ -564,6 +588,10 @@ footer {
 
   .header__logo {
     width: 20%;
+  }
+
+  .black-curtain {
+    display: flex;
   }
 
   .principal--bg {
